# EuroLitA

./: README.md  main.py  pyproject.toml
cache/: global_totals.json  totals.parquet
data/: country_codes.csv
templates/: base.html  index.html  result.html
tests/: test_name_checker.py
utils/: logging_config.py  name_checker.py  name_normalizer.py
