[project]
name = "eurolita"
version = "0.1.0"
description = "Satirical European name plausibility checker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "pandas>=2.2",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.uv]
default-groups = []       

[tool.ruff]                 
line-length = 100
